# storybook_agent

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yaml  pyproject.toml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: bcdac587e861_create_users_table.py  e4f6a82d3c19_make_user_api_key_optional.py  f1a2b3c4d5e6_add_title_to_story_histories.py
backend/app/: database.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: auth.py  drafts.py  health.py  router.py  stories.py  users.py
backend/app/core/: client_factory.py  config.py  database.py  dependencies.py  image_resolver.py  logging_config.py  minio.py  openai_client.py  prompt_loader.py  redis_client.py  security.py
backend/app/core/prompts/: background_generator.txt  background_planner.txt  reference_image.txt  reference_image_user.txt
backend/app/models/: refresh_token.py  user.py
backend/app/prompts/: analyze_image.txt  generate_image.txt  generate_text.txt  system_prompt.txt
backend/app/repositories/: agent_repository.py  draft_repository.py  token_repository.py  user_repository.py
backend/app/schemas/: auth.py  draft.py  story_elements.py  story_pipeline.py  tool_args.py  user.py
backend/app/services/: agent_loop.py  agent_service.py  auth_service.py  draft_service.py  image_service.py  text_service.py  tool_service.py
backend/app/story_pipeline/: adapters.py  deps.py  draft_adapters.py  events.py  graph.py  ports.py  runner.py  serialization.py
backend/app/story_pipeline/agents/: action_context.py  common.py  (+2 more)
(+27 files in other folders)
