[project]
name = "StoryBook_Agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.3",
    "openai>=2.34.0",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.49",
    "alembic>=1.18.4",
    "psycopg[binary]>=3.3.4",
]
