[project]
name = "StoryBook_Agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai-slim[openai]>=1.0.0",
    "pydantic>=2.13.3",
    "openai>=2.34.0",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "pydantic-settings>=2.14.1",
    "sqlmodel>=0.0.24",
    "alembic>=1.18.4",
    "psycopg[binary]>=3.3.4",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.28",
    "email-validator>=2.3.0",
    "bcrypt==4.0.1",
    "cryptography>=48.0.0",
    "minio>=7.2.15",
    "redis[hiredis]>=5.2.1",
]
